# AlphaOS

./: .env.example  .gitignore  MA Expected Return 5_30_26.xlsx  next.config.mjs  package-lock.json  package.json
docs/: AUTH_ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  DATABASE_ARCHITECTURE.md  MULTITENANCY.md  ai-pipeline-archive.md
macro_regime_allocator/: config.py  config.yaml  data.py  main.py
prism_ai/: .env.example  .gitignore  Makefile  README.md  plot_data.py  pyproject.toml  requirements.txt
prism_ai/config/: data_schema.yaml  model_config.yaml
prism_ai/config/prompts/: company_overview.md  investment_philosophy.md  position_sizing.md  thesis_critique.md  thesis_fundamentals.md  watchlist_perspective.md
prism_ai/src/: __init__.py  main.py
prism_ai/src/context_builder/: __init__.py  context_assembler.py  priority_ranker.py  token_manager.py
prism_ai/src/data_ingestion/: __init__.py  csv_parser.py  data_validator.py  pdf_extractor.py  sec_filings.py
prism_ai/src/llm_engine/: __init__.py  gemini_client.py  history_tracker.py  inference.py  prompt_loader.py  response_parser.py
prism_ai/src/portfolio/: __init__.py  position_calculator.py  risk_manager.py
prism_ai/src/utils/: __init__.py  data_generator.py  helpers.py  logging_config.py  supabase_store.py
scripts/: demo-schema.sql  demo-seed.sql  macro-sync.mjs  migrate-macro-plots.mjs  migrate-storage-urls.mjs  provision-demo.mjs  seed-prism-data.mjs  seed-prism-docs.mjs  seed-prism.mjs  supabase-schema.sql
src/: proxy.js
tests/: accountingState.test.mjs  adminClient.test.mjs  issues.test.mjs  (+10 more)
(+222 files in other folders)
