[project]
name = "llm-quant"
version = "0.1.0"
description = "LLM-powered quantitative investment analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.22.0",
    "PyMuPDF>=1.23.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "yfinance>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
